# solclaw

./: .env.example  .gitignore  Anchor.toml  LICENSE  README.md  package-lock.json  package.json  test-local.ts  test-register.ts  tsconfig.json  vercel.json
api/: agents.ts  allowances.ts  approve.ts  batch.ts  due.ts  execute.ts  health.ts  index.ts  init-counter.ts  invoice.ts  leaderboard.ts  limit.ts  refund.ts  register.ts  revoke.ts  send.ts  shared.ts  skill.ts  split.ts  subscribe.ts  subscriptions.ts  transfer-from.ts  webhook.ts
api/balance/: [name].ts
api/invoice/: [id].ts
api/invoice/[id]/: cancel.ts  pay.ts  reject.ts
api/invoices/: [name].ts
api/reputation/: [name].ts
api/resolve/: [name].ts
programs/solclaw/: Cargo.toml
programs/solclaw/src/: lib.rs
public/: heartbeat.md  index.html  skill.md
sdk/: package-lock.json  package.json
sdk/idl/: solclaw.json
sdk/src/: index.ts
skill/scripts/: solclaw.sh
tests/: solclaw.js
