[package]
name = "solclaw"
version = "0.1.0"
description = "Agent-to-Agent USDC payments by name on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solclaw"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"

# Pin to version that doesn't require edition2024
constant_time_eq = "=0.3.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
